--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,7 @@
     <img
       src="./images/lasagna.jpg"
       alt="A plate of lasagna"
-      height="400px"
+      height="auto"
       width="400px"
     />
     <h2>Description</h2>
