--- a/recipes/napa_cabbage_salad.html
+++ b/recipes/napa_cabbage_salad.html
@@ -9,7 +9,7 @@
     <a href="../index.html">Home</a>
     <h1>Napa Cabbage Salad</h1>
     <img src="./images/napa cabbage salad.jpg" alt="A tray of napa cabbage
-    salad" / height="400px" width="450px">
+    salad" / height="auto" width="450px">
     <h2>Description</h2>
     <p>
       This is a yummy, crunchy napa cabbage salad with toasted ramen noodles and
