Update image width in persimmon bread recipe
Adjusted image dimensions for persimmon bread.

--- a/recipes/persimmon_bread.html
+++ b/recipes/persimmon_bread.html
@@ -12,7 +12,7 @@
       src="./images/persimmon bread.jpg"
       alt="A tray of persimmon bread"
       height="auto"
-      height="400px"
+      width="400px"
     />
     <h2>Description</h2>
     <p>
