--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipe</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li>
+    <div class="container">
+      <div class="odin-recipes">
+        <h1>Odin Recipes</h1>
+      </div>
+      <div class="recipes-list">
+        <ul>
+          <li class="lasagna">
             <a href="./recipes/lasagna.html">Homemade Lasagna</a>
-        </li>
-        <li>
+          </li>
+          <li class="napa">
             <a href="./recipes/napa_cabbage_salad.html">Napa Cabbage Salad</a>
-        </li>
-        <li>
+          </li>
+          <li class="bread">
             <a href="./recipes/persimmon_bread.html">Persimmon Bread</a>
-        </li>
-    </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
